--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
